--- a/scss/style.css
+++ b/scss/style.css
@@ -9,20 +9,68 @@
   padding: 50px;
   max-width: 1000px;
   height: 100vh;
-  background-color: coral;
 }
 .container .calculator {
   margin: 0px auto;
   padding: 10px;
-  width: 400px;
-  height: 600px;
-  background-color: darkblue;
+  width: 350px;
+  height: 550px;
+  border-radius: 10px;
+  background-color: #cccccc;
 }
-.container .calculator button {
+.container .calculator .btn {
   width: 100%;
   height: 100%;
-  font-size: 20px;
-  background-color: chartreuse;
+  font-size: 38px;
+  font-weight: 700;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 50px;
+}
+.container .calculator .btn:hover {
+  border: 2px solid rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+}
+
+.number {
+  background-color: rgb(255, 255, 255);
+}
+.number:hover {
+  background-color: #262626;
+}
+
+.action,
+.equals {
+  background-color: rgb(255, 100, 0);
+}
+.action:hover,
+.equals:hover {
+  background-color: #b34600;
+}
+
+.percent,
+.remove,
+.minus,
+.point,
+.clear {
+  background-color: #999999;
+}
+.percent:hover,
+.remove:hover,
+.minus:hover,
+.point:hover,
+.clear:hover {
+  background-color: #262626;
+}
+
+.text {
+  pointer-events: none;
+  text-align: right;
+  font-size: 48px;
+  font-weight: 500;
+  padding-right: 5px;
+  border: none;
+  border-radius: 10px;
 }
 
 .calculator {
@@ -36,42 +84,38 @@
   grid-column: 1/5;
 }
 
-.percent, .clear, .remove {
+.percent, .clear, .remove, .division {
   grid-row: 2/3;
 }
 
-.division {
+.seven, .eight, .nine, .multiplication {
   grid-row: 3/4;
 }
 
-.seven, .eight, .nine, .multiplication {
+.four, .five, .six, .subtraction {
   grid-row: 4/5;
 }
 
-.four, .five, .six, .subtraction {
+.one, .two, .three, .addition {
   grid-row: 5/6;
 }
 
-.one, .two, .three, .addition {
-  grid-row: 6/7;
-}
-
 .minus, .zero, .point, .equals {
-  grid-row: 7/8;
+  grid-row: 6/7;
 }
 
 .minus, .one, .four, .seven, .percent {
   grid-column: 1/2;
 }
 
-.zero, .two, .five, .eight {
+.zero, .two, .five, .eight, .clear {
   grid-column: 2/3;
 }
 
-.point, .three, .six, .nine, .clear {
+.point, .three, .six, .nine, .remove {
   grid-column: 3/4;
 }
 
-.equals, .addition, .subtraction, .multiplication, .division, .remove {
+.equals, .addition, .subtraction, .multiplication, .division {
   grid-column: 4/5;
 }
