--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,27 +4,76 @@
   box-sizing: border-box;
 }
 
+
+$colorPrimary: rgb(255, 255, 255);
+$colorSecondary: rgb(0, 0, 0);
+$colorTertiary: rgb(255, 100, 0);
+
 .container {
   margin: 0px auto;
   padding: 50px;
   max-width: 1000px;
   height: 100vh;
-  background-color: coral;
 
   .calculator {
     margin: 0px auto;
     padding: 10px;
-    width: 400px;
-    height: 600px;
-    background-color: darkblue;
+    width: 350px;
+    height: 550px;
+    border-radius: 10px;
+    background-color: lighten($color:$colorSecondary, $amount: 80);
 
-    button {
+    .btn {
     width: 100%;
     height: 100%;
-    font-size: 20px;   
-    background-color: chartreuse;
+    font-size: 38px; 
+    font-weight: 700; 
+    border: 2px solid $colorSecondary;
+    border-radius: 50px;
+
+      &:hover {
+      border: 2px solid $colorPrimary;
+      color: $colorPrimary;
+      cursor: pointer;
+      }
     }
   }
+}
+
+.number {
+  background-color: $colorPrimary;
+    &:hover {
+    background-color: lighten($color:$colorSecondary, $amount: 15);
+  }
+}
+
+.action,
+.equals {
+  background-color: $colorTertiary;
+  &:hover {
+    background-color:  darken($colorTertiary, $amount: 15);
+  }
+}
+
+.percent,
+.remove,
+.minus,
+.point,
+.clear {
+  background-color: lighten($color:$colorSecondary, $amount: 60);
+  &:hover {
+    background-color:  lighten($color:$colorSecondary, $amount: 15);
+  }
+}
+
+.text {
+  pointer-events: none;
+  text-align: right;
+  font-size: 48px;
+  font-weight: 500;
+  padding-right: 5px;
+  border: none;
+  border-radius: 10px;
 }
 
 @import '_grid';
